--- a/index.html
+++ b/index.html
@@ -651,7 +651,9 @@
                 <div class="text-center mx-auto pb-5 wow fadeInUp" data-wow-delay="0.2s" style="max-width: 800px;">
                     <h4 class="text-primary">FAQs</h4>
                     <h1 class="display-5 mb-4">Frequently Asked Questions</h1>
-                    <p class="mb-0">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Tenetur adipisci facilis cupiditate recusandae aperiam temporibus corporis itaque quis facere, numquam, ad culpa deserunt sint dolorem autem obcaecati, ipsam mollitia hic.
+                    <p class="mb-0">
+                        Here we aim to answer some of the most Frequently asked questions about us and technology today. If we did not answer your question here 
+                        please fill out a contact us form and we will reach out to get your question answered.
                     </p>
                 </div>
                 <div class="row g-5 align-items-center">
@@ -660,31 +662,44 @@
                             <div class="accordion-item rounded-top">
                                 <h2 class="accordion-header" id="flush-headingOne">
                                     <button class="accordion-button collapsed rounded-top" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
-                                    What Does This Tool Do?
+                                    What Do You Do For Residential Customers?
                                     </button>
                                 </h2>
                                 <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushSection">
-                                    <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the <code>.accordion-flush</code> class. This is the first item's accordion body.</div>
+                                    <div class="accordion-body"> For residential customers, we offer a wide range of services <code>.accordion-flush</code> to enhance their homes and tech experiences. 
+                                        This includes turning homes into smart homes, installing and wiring security cameras and systems, mounting TVs and sound systems, troubleshooting TV and computer 
+                                        issues, and providing phone and tablet repairs. We also assist with social media account management and a variety of other tech-related needs. Whatever the tech 
+                                        challenge, we’re here to help!
+                                    </div>
                                 </div>
                             </div>
                             <div class="accordion-item">
                                 <h2 class="accordion-header" id="flush-headingTwo">
                                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
-                                    What Are The Disadvantages Of Online Trading?
+                                    What is The Advantage of Building My PC With You?
                                     </button>
                                 </h2>
                                 <div id="flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo" data-bs-parent="#accordionFlushSection">
-                                    <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the <code>.accordion-flush</code> class. This is the second item's accordion body. Let's imagine this being filled with some actual content.</div>
+                                    <div class="accordion-body"> Building your PC with us means getting personalized expertise <code>.accordion-flush</code> and a custom setup tailored to your needs. Whether 
+                                        you're gaming, video editing, or just need a high-performance workstation, we help you select the right components for maximum performance and reliability. We offer 
+                                        professional assembly, cable management, and testing to ensure everything runs smoothly. Plus, we provide ongoing support for troubleshooting and upgrades, so your PC 
+                                        continues to meet your evolving needs. With us, you're not just getting a PC; you're getting a system built for you.
+                                    </div>
                                 </div>
                             </div>
                             <div class="accordion-item">
                                 <h2 class="accordion-header" id="flush-headingThree">
                                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
-                                    Is Online Trading Safe?
+                                    Can Managed Services be Tailored?
                                     </button>
                                 </h2>
                                 <div id="flush-collapseThree" class="accordion-collapse collapse" aria-labelledby="flush-headingThree" data-bs-parent="#accordionFlushSection">
-                                    <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the <code>.accordion-flush</code> class. This is the second item's accordion body. Let's imagine this being filled with some actual content.</div>
+                                    <div class="accordion-body"> Yes, managed services can absolutely be tailored to fit <code>.accordion-flush</code> your specific needs. Whether you're a small business, a 
+                                        large enterprise, or a residential customer, we can customize our offerings to match your requirements. This includes selecting the right level of IT support, network 
+                                        management, security, data backups, and other tech services. We work with you to understand your goals and challenges, then design a plan that provides the right mix 
+                                        of proactive monitoring, troubleshooting, and maintenance. Tailored managed services ensure you only pay for what you need, while also giving you the flexibility to 
+                                        scale as your business or tech needs grow. 
+                                    </div>
                                 </div>
                             </div>
                             <div class="accordion-item">
@@ -813,7 +828,7 @@
         </div>
         Team End -->
 
-        <!-- Testimonial Start -->
+        <!-- Testimonial Start 
         <div class="container-fluid testimonial pb-5">
             <div class="container pb-5">
                 <div class="text-center mx-auto pb-5 wow fadeInUp" data-wow-delay="0.2s" style="max-width: 800px;">
@@ -938,7 +953,7 @@
                 </div>
             </div>
         </div>
-        <!-- Testimonial End -->
+         Testimonial End -->
 
         <!-- Footer Start -->
         <div class="container-fluid footer py-5 wow fadeIn" data-wow-delay="0.2s">
@@ -991,7 +1006,7 @@
                             </div>
                             <div class="d-flex">
                                 <a class="btn btn-primary btn-sm-square rounded-circle me-3" href="#"><i class="fab fa-facebook-f text-white"></i></a>
-                                <a class="btn btn-primary btn-sm-square rounded-circle me-3" href="#"><i class="fab fa-twitter text-white"></i></a>
+                                <a class="btn btn-primary btn-sm-square rounded-circle me-3" href="https://x.com/thenextwaveit"><i class="fab fa-twitter text-white"></i></a>
                                 <a class="btn btn-primary btn-sm-square rounded-circle me-3" href="#"><i class="fab fa-instagram text-white"></i></a>
                                 <a class="btn btn-primary btn-sm-square rounded-circle me-0" href="#"><i class="fab fa-linkedin-in text-white"></i></a>
                             </div>
