--- a/service.html
+++ b/service.html
@@ -4,6 +4,8 @@
 <head>
     <meta charset="utf-8">
     <title>NextWave Technologies</title>
+    <!-- add icon link -->
+    <link rel="icon" href="i2.png" type="image/x-icon" />
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="" name="keywords">
     <meta content="" name="description">
@@ -119,8 +121,7 @@
         <div class="container-fluid service pb-5">
             <div class="container pb-5">
                 <div class="text-center mx-auto pb-5 wow fadeInUp" data-wow-delay="0.2s" style="max-width: 800px;">
-                    <h4 class="text-primary"></h4>
-                    <h1 class="display-5 mb-4">We Services provided best offer</h1>
+                    <h1 class="display-5 mb-4"><br> What Services Do You Provide?</h1>
                     <p class="mb-0">
                         We offer a wide range of IT services, including network setup, cybersecurity, cloud solutions, 
                         data management, and tech support for both residential and commercial clients. Our team is dedicated 
