--- a/index.html
+++ b/index.html
@@ -738,7 +738,7 @@
                     </div>
                     <div class="col-lg-6 wow fadeInRight" data-wow-delay="0.2s">
                         <div class="bg-primary rounded">
-                            <img src="img/f1.png" class="img-fluid w-100" alt="">
+                            <img src="img/f1.jpg" class="img-fluid w-100" alt="">
                         </div>
                     </div>
                 </div>
