--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                                         <p class="mb-5 fs-5">The Next Wave of IT 
                                         </p>
                                         <div class="d-flex justify-content-center justify-content-md-end flex-shrink-0 mb-4">
-                                            <a class="btn btn-light rounded-pill py-3 px-4 px-md-5 me-2" href="img/NWtech.mp4"><i class="fas fa-play-circle me-2"></i> Watch Video</a>
+                                            <a class="btn btn-light rounded-pill py-3 px-4 px-md-5 me-2" href="img/NWtech.mp4" target="_blank"><i class="fas fa-play-circle me-2"></i> Watch Video</a>
                                             <a class="btn btn-primary rounded-pill py-3 px-4 px-md-5 ms-2" href="#">Learn More</a>
                                         </div>
                                         <div class="d-flex align-items-center justify-content-center justify-content-md-end">
