--- a/index.html
+++ b/index.html
@@ -122,10 +122,10 @@
                                         <div class="d-flex align-items-center justify-content-center justify-content-md-end">
                                             <h2 class="text-white me-2">Follow Us:</h2>
                                             <div class="d-flex justify-content-end ms-2">
-                                                <a class="btn btn-md-square btn-light rounded-circle me-2" href=""><i class="fab fa-facebook-f"></i></a>
-                                                <a class="btn btn-md-square btn-light rounded-circle mx-2" href=""><i class="fab fa-twitter"></i></a>
-                                                <a class="btn btn-md-square btn-light rounded-circle mx-2" href=""><i class="fab fa-instagram"></i></a>
-                                                <a class="btn btn-md-square btn-light rounded-circle ms-2" href=""><i class="fab fa-linkedin-in"></i></a>
+                                                <a class="btn btn-md-square btn-light rounded-circle me-2" href="https://www.facebook.com/share/1DyTcXY5uk/?mibextid=LQQJ4d" target="_blank"><i class="fab fa-facebook-f"></i></a>
+                                                <a class="btn btn-md-square btn-light rounded-circle mx-2" href="https://x.com/thenextwaveit" target="_blank"><i class="fab fa-x-twitter"></i></a>
+                                                <a class="btn btn-md-square btn-light rounded-circle mx-2" href="https://www.instagram.com/thenextwaveit/" target="_blank"><i class="fab fa-instagram"></i></a>
+                                                <a class="btn btn-md-square btn-light rounded-circle ms-2" href="" target="_blank"><i class="fab fa-linkedin-in"></i></a>
                                             </div>
                                         </div>
                                     </div>
