--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                                             <h2 class="text-white me-2">Follow Us:</h2>
                                             <div class="d-flex justify-content-end ms-2">
                                                 <a class="btn btn-md-square btn-light rounded-circle me-2" href="https://www.facebook.com/share/1DyTcXY5uk/?mibextid=LQQJ4d" target="_blank"><i class="fab fa-facebook-f"></i></a>
-                                                <a class="btn btn-md-square btn-light rounded-circle mx-2" href="https://x.com/thenextwaveit" target="_blank"><i class="fab fa-x-twitter"></i></a>
+                                                <a class="btn btn-md-square btn-light rounded-circle mx-2" href="https://x.com/thenextwaveit" target="_blank"><i class="fab fa-twitter"></i></a>
                                                 <a class="btn btn-md-square btn-light rounded-circle mx-2" href="https://www.instagram.com/thenextwaveit/" target="_blank"><i class="fab fa-instagram"></i></a>
                                                 <a class="btn btn-md-square btn-light rounded-circle ms-2" href="" target="_blank"><i class="fab fa-linkedin-in"></i></a>
                                             </div>
@@ -1007,10 +1007,10 @@
                                 <p class="text-white mb-0">nextwaveit-admin.github.io</p>
                             </div>
                             <div class="d-flex">
-                                <a class="btn btn-primary btn-sm-square rounded-circle me-3" href="#"><i class="fab fa-facebook-f text-white"></i></a>
-                                <a class="btn btn-primary btn-sm-square rounded-circle me-3" href="https://x.com/thenextwaveit"><i class="fab fa-twitter text-white"></i></a>
-                                <a class="btn btn-primary btn-sm-square rounded-circle me-3" href="#"><i class="fab fa-instagram text-white"></i></a>
-                                <a class="btn btn-primary btn-sm-square rounded-circle me-0" href="#"><i class="fab fa-linkedin-in text-white"></i></a>
+                                <a class="btn btn-primary btn-sm-square rounded-circle me-3" href="https://www.facebook.com/share/1DyTcXY5uk/?mibextid=LQQJ4d" target="_blank"><i class="fab fa-facebook-f text-white"></i></a>
+                                <a class="btn btn-primary btn-sm-square rounded-circle me-3" href="https://x.com/thenextwaveit" target="_blank"><i class="fab fa-twitter text-white"></i></a>
+                                <a class="btn btn-primary btn-sm-square rounded-circle me-3" href="https://www.instagram.com/thenextwaveit/" target="_blank"><i class="fab fa-instagram text-white"></i></a>
+                                <a class="btn btn-primary btn-sm-square rounded-circle me-0" href="#" target="_blank"><i class="fab fa-linkedin-in text-white"></i></a>
                             </div>
                         </div>
                     </div>
