--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
             <div class="container pb-5">
                 <div class="text-center mx-auto pb-5 wow fadeInUp" data-wow-delay="0.2s" style="max-width: 800px;">
                     <h4 class="text-primary">Our Services</h4>
-                    <h1 class="display-5 mb-4">We Services provided best offer</h1>
+                    <h1 class="display-5 mb-4">What Services Do You Provide?</h1>
                     <p class="mb-0">
                         We offer a wide range of IT services, including network setup, cybersecurity, cloud solutions, 
                         data management, and tech support for both residential and commercial clients. Our team is dedicated 
