--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 
     <head>
         <meta charset="utf-8">
-        <title><link rel="icon" href="i2.png" type="image/x-icon" />NextWave Technologies</title>
+        <link rel="icon" href="i2.png" type="image/x-icon" />
+        <title>NextWave Technologies</title>
         <!-- add icon link -->
         
         <meta content="width=device-width, initial-scale=1.0" name="viewport">
