--- a/index.html
+++ b/index.html
@@ -75,8 +75,7 @@
         <div class="container-fluid position-relative p-0">
             <nav class="navbar navbar-expand-lg navbar-light px-4 px-lg-5 py-3 py-lg-0">
                 <a href="" class="navbar-brand p-0">
-                    <h1 class="text-primary"><i class="fas fa-wave me-3"></i>NextWave Technologies</h1>
-                    <img src="img/wave.png" alt="Logo">
+                    <h1 class="text-primary"><img src="img/wave.png" alt="Logo">NextWave Technologies</h1>
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
                     <span class="fa fa-bars"></span>
