--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
     <head>
         <meta charset="utf-8">
-        <link rel="icon" href="/img/wave.png" type="image/x-icon" />
+        <link rel="icon" href="/img/waveD.png" type="image/x-icon" />
         <title>NextWave Technologies</title>
         <!-- add icon link -->
         
@@ -75,7 +75,7 @@
         <div class="container-fluid position-relative p-0">
             <nav class="navbar navbar-expand-lg navbar-light px-4 px-lg-5 py-3 py-lg-0">
                 <a href="" class="navbar-brand p-0">
-                    <h1 class="text-primary"><img src="img/wave.png" alt="Logo">NextWave Technologies</h1>
+                    <h1 class="text-primary"><img src="img/smWaveD.png" alt="Logo">NextWave Technologies</h1>
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
                     <span class="fa fa-bars"></span>
