--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
                         <a href="mailto:thenextwaveit@gmail.com" class="text-muted small me-0"><i class="fas fa-envelope text-primary me-2"></i>thenextwaveit@gmail.com</a>
                     </div>
                 </div>
+                <!-- 
                 <div class="col-lg-4 text-center text-lg-end">
                     <div class="d-inline-flex align-items-center" style="height: 45px;">
                         <a href="#"><small class="me-3 text-dark"><i class="fa fa-user text-primary me-2"></i>Register</small></a>
@@ -67,6 +68,7 @@
                         </div>
                     </div>
                 </div>
+                -->
             </div>
         </div>
         <!-- Topbar End -->
@@ -90,14 +92,15 @@
                                 <span class="dropdown-toggle">Pages</span>
                             </a>
                             <div class="dropdown-menu m-0">
-                                <a href="feature.html" class="dropdown-item">Our Patners</a>
-                                <a href="team.html" class="dropdown-item">Our team</a>
+                                <a href="feature.html" class="dropdown-item">Our Plans</a>
+                                <a href="team.html" class="dropdown-item">Our Team</a>
+                                <a href="offer.html" class="dropdown-item">Terms of Service</a>
                                 <a href="FAQ.html" class="dropdown-item">FAQs</a>
                             </div>
                         </div>
                         <a href="contact.html" class="nav-item nav-link">Contact Us</a>
                     </div>
-                    <a href="#" class="btn btn-primary rounded-pill py-2 px-4 my-3 my-lg-0 flex-shrink-0">Get Started</a>
+                    <a href="contact.html" class="btn btn-primary rounded-pill py-2 px-4 my-3 my-lg-0 flex-shrink-0">Get Started</a>
                 </div>
             </nav>
 
@@ -117,7 +120,7 @@
                                         </p>
                                         <div class="d-flex justify-content-center justify-content-md-end flex-shrink-0 mb-4">
                                             <a class="btn btn-light rounded-pill py-3 px-4 px-md-5 me-2" href="img/NWtech.mp4" target="_blank"><i class="fas fa-play-circle me-2"></i> Watch Video</a>
-                                            <a class="btn btn-primary rounded-pill py-3 px-4 px-md-5 ms-2" href="#">Learn More</a>
+                                            <a class="btn btn-primary rounded-pill py-3 px-4 px-md-5 ms-2" href="service.html">Learn More</a>
                                         </div>
                                         <div class="d-flex align-items-center justify-content-center justify-content-md-end">
                                             <h2 class="text-white me-2">Follow Us:</h2>
@@ -152,7 +155,7 @@
                                         <div class="d-flex align-items-center justify-content-center">
                                             <h2 class="text-white me-2">Follow Us:</h2>
                                             <div class="d-flex justify-content-end ms-2">
-                                                <a class="btn btn-md-square btn-light rounded-circle me-2" href=""><i class="fab fa-facebook-f"></i></a>
+                                                <a class="btn btn-md-square btn-light rounded-circle me-2" href="https://www.facebook.com/share/1DyTcXY5uk/?mibextid=LQQJ4d"><i class="fab fa-facebook-f"></i></a>
                                                 <a class="btn btn-md-square btn-light rounded-circle mx-2" href="https://x.com/thenextwaveit"><i class="fab fa-twitter"></i></a>
                                                 <a class="btn btn-md-square btn-light rounded-circle mx-2" href="https://www.instagram.com/thenextwaveit/"><i class="fab fa-instagram"></i></a>
                                                 <a class="btn btn-md-square btn-light rounded-circle ms-2" href=""><i class="fab fa-linkedin-in"></i></a>
@@ -977,13 +980,15 @@
                             <h4 class="text-white mb-4">Quick Links</h4>
                             <a href="/about.html"><i class="fas fa-angle-right me-2"></i> About Us</a>
                             <a href="/contact.html"><i class="fas fa-angle-right me-2"></i> Contact us</a>
+                            <a href="/service.html"><i class="fas fa-angle-right me-2"></i> Our Services</a>
+                            <a href="/feature.html"><i class="fas fa-angle-right me-2"></i> Our Plans</a>
                         </div>
                     </div>
                     <div class="col-md-6 col-lg-6 col-xl-3">
                         <div class="footer-item">
                             <h4 class="text-white mb-4">Support</h4>
-                            <a href="/testimonial.html"><i class="fas fa-angle-right me-2"></i> Terms & Conditions</a>
-                            <a href="/testimonial.html"><i class="fas fa-angle-right me-2"></i> Disclaimer</a>
+                            <a href="/offer.html"><i class="fas fa-angle-right me-2"></i> Terms & Conditions</a>
+                            <a href="/offer.html"><i class="fas fa-angle-right me-2"></i> Disclaimer</a>
                             <a href="/FAQ.html"><i class="fas fa-angle-right me-2"></i> FAQ</a>
                         </div>
                     </div>
@@ -992,7 +997,7 @@
                             <h4 class="text-white mb-4">Contact Info</h4>
                             <div class="d-flex align-items-center">
                                 <i class="fas fa-map-marker-alt text-primary me-3"></i>
-                                <p class="text-white mb-0">123 Street New York.USA</p>
+                                <p class="text-white mb-0">Michigan, USA</p>
                             </div>
                             <div class="d-flex align-items-center">
                                 <i class="fas fa-envelope text-primary me-3"></i>
@@ -1039,7 +1044,7 @@
 
 
         <!-- Back to Top -->
-        <a href="#" class="btn btn-primary btn-lg-square rounded-circle back-to-top"><i class="fa fa-arrow-up"></i></a>   
+        <a href="index.html" class="btn btn-primary btn-lg-square rounded-circle back-to-top"><i class="fa fa-arrow-up"></i></a>   
 
         
         <!-- JavaScript Libraries -->
